YH-1921: Fixed incorrect module block sizes, text size, wrapping issues, and extra element in Mentoring - Pricing section at 768px resolution

--- a/src/widgets/Mentor/PricingSection/ui/BonusesBlock/BonusesBlock.module.css
+++ b/src/widgets/Mentor/PricingSection/ui/BonusesBlock/BonusesBlock.module.css
@@ -41,7 +41,7 @@
 
 	.bonus-block {
 		padding: 10px;
-		min-height: 0;
+		min-height: initial;
 	}
 
 	.description {
